[package]
name = "attolytics"
version = "0.1.0"
authors = ["Thomas ten Cate <ttencate@gmail.com>"]
edition = "2018"

[dependencies]
clap = "~2.32.0"
itertools = "~0.8.0"
postgres = "~0.15"
r2d2 = "~0.8.3"
r2d2_postgres = "~0.14.0"
rocket = "~0.4.0"
serde = "~1.0"
serde_json = "~1.0"
url = "~1.7.2"
yaml-rust = "~0.4"