[package]
name = "attolytics"
version = "0.1.0"
authors = ["Thomas ten Cate <ttencate@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "~0.4.6"
clap = "~2.32.0"
itertools = "~0.8.0"
linked-hash-map = "~0.5.1"
postgres = { version = "~0.15", features = ["with-chrono"] }
r2d2 = "~0.8.3"
r2d2_postgres = "~0.14.0"
rocket = "~0.4.0"
rocket_contrib = "~0.4.0"
rocket_cors = "~0.4.0"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_yaml = "~0.8.8"
systemd = "~0.4"
url = "~1.7.2"
yaml-rust = "~0.4"
